<resources>
    <string name="app_name">Salawat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Salawat</string>
    <string name="nav_header_subtitle">Offline Islamic companion</string>
    <string name="nav_header_desc">Prayer times, Qibla, Hijri calendar and Quran</string>
    <string name="menu_calender">التقويم الميلادي</string>
    <string name="menu_home">الصفحة الرئيسية</string>
    <string name="salawat_time">اوقات الصلوات</string>
    <string name="alqibla">اتجاه القبلة</string>
    <string name="menu_reminder">أذان وتنبيهات الصلاة</string>
    <string name="menu_hijri">التقويم الهجري</string>
    <string name="menu_holydates">الايام الدينية</string>
    <string name="title_activity_read_json">read_json</string>
    <string name="title_activity_main3">اوقات الصلوات</string>
    <string name="tv">TextView</string>
    <string name="menu_qibla">اتجاه القبلة</string>
    <string name="menu_prayertimes">اوقات الصلوات</string>
    <string name="menu_quran">القرآن الكريم</string>
    <string name="qibla_direction_text">اتجاه القبلة</string>
</resources>
