<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/calenderitem"
        android:orderInCategory="1"
        android:title="@string/menu_calender"
        app:showAsAction="never" />
    <item
        android:id="@+id/homeitem"
        android:orderInCategory="2"
        android:title="@string/menu_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/hiriItem"
        android:orderInCategory="3"
        android:title="@string/menu_hijri"
        app:showAsAction="never" />
    <item
        android:id="@+id/reminderitem"
        android:orderInCategory="4"
        android:title="@string/menu_reminder"
        app:showAsAction="never" />
    <item
        android:id="@+id/prayertimesitem"
        android:orderInCategory="5"
        android:title="@string/menu_prayertimes"
        app:showAsAction="never" />
    <item
        android:id="@+id/quranitem"
        android:orderInCategory="6"
        android:title="@string/menu_quran"
        app:showAsAction="never" />
</menu>
